[project]
name = "langgraph-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.1",
    "python-dotenv>=1.2.2",
]
